--- a/presidential timeline.html
+++ b/presidential timeline.html
@@ -2,9 +2,9 @@
 <html>
    <head>
       <title>Presidential Timeline</title>
-      <meta http-equiv = "refresh" content = "2; url = https://docs.google.com/spreadsheets/d/1HMJLYRjVyom2wI3PaLGioZOIC7qpsxLN5stiubKa8V4/" />
+      <meta http-equiv = "refresh" content = "0; url = https://docs.google.com/spreadsheets/d/1HMJLYRjVyom2wI3PaLGioZOIC7qpsxLN5stiubKa8V4/" />
    </head>
    <body>
-      <p>Redirect page</p>
+      <p>holy cow how could blessed wholesome george wallace use to rfkringe</p>
    </body>
 </html>
