--- a/Soviet-Republics.html
+++ b/Soviet-Republics.html
@@ -41,7 +41,7 @@
               <img src="media/small/Soviet%20Republics/Autonomous%20Republics/Crimean%20Autonomous%20Soviet%20Socialist%20Republic.png" alt="">
               <div class="caption" style="display: inline-block">
                 <h3>Autonomous Republics</h3>
-                <div class="summary">3 photos</div>
+                <div class="summary">4 photos</div>
               </div>
             </a>
       </div>
@@ -80,15 +80,6 @@
           </div>      
           <div class="albumList"
               data-sub-html=""
-              data-download-url="media/original/Soviet%20Republics/Karakalpak%20Autonomous%20Soviet%20Socialist%20Republic.png"data-src="media/large/Soviet%20Republics/Karakalpak%20Autonomous%20Soviet%20Socialist%20Republic.png"data-exthumbimage="media/thumbs/Soviet%20Republics/Karakalpak%20Autonomous%20Soviet%20Socialist%20Republic.png"data-filename="Karakalpak Autonomous Soviet Socialist Republic.png"><a href="media/large/Soviet%20Republics/Karakalpak%20Autonomous%20Soviet%20Socialist%20Republic.png"><img
-                      src="media/small/Soviet%20Republics/Karakalpak%20Autonomous%20Soviet%20Socialist%20Republic.png"
-                      width="600"
-                      height="300"alt="Karakalpak Autonomous Soviet Socialist Republic.png"/>
-              </a>
-          
-          </div>      
-          <div class="albumList"
-              data-sub-html=""
               data-download-url="media/original/Soviet%20Republics/Kazakh%20Soviet%20Socialist%20Republic.png"data-src="media/large/Soviet%20Republics/Kazakh%20Soviet%20Socialist%20Republic.png"data-exthumbimage="media/thumbs/Soviet%20Republics/Kazakh%20Soviet%20Socialist%20Republic.png"data-filename="Kazakh Soviet Socialist Republic.png"><a href="media/large/Soviet%20Republics/Kazakh%20Soviet%20Socialist%20Republic.png"><img
                       src="media/small/Soviet%20Republics/Kazakh%20Soviet%20Socialist%20Republic.png"
                       width="600"
@@ -107,10 +98,10 @@
           </div>      
           <div class="albumList"
               data-sub-html=""
-              data-download-url="media/original/Soviet%20Republics/Russian%20Socialist%20Federative%20Soviet%20Republic.png"data-src="media/large/Soviet%20Republics/Russian%20Socialist%20Federative%20Soviet%20Republic.png"data-exthumbimage="media/thumbs/Soviet%20Republics/Russian%20Socialist%20Federative%20Soviet%20Republic.png"data-filename="Russian Socialist Federative Soviet Republic.png"><a href="media/large/Soviet%20Republics/Russian%20Socialist%20Federative%20Soviet%20Republic.png"><img
-                      src="media/small/Soviet%20Republics/Russian%20Socialist%20Federative%20Soviet%20Republic.png"
+              data-download-url="media/original/Soviet%20Republics/Russian%20Soviet%20Federative%20Socialist%20Republic.png"data-src="media/large/Soviet%20Republics/Russian%20Soviet%20Federative%20Socialist%20Republic.png"data-exthumbimage="media/thumbs/Soviet%20Republics/Russian%20Soviet%20Federative%20Socialist%20Republic.png"data-filename="Russian Soviet Federative Socialist Republic.png"><a href="media/large/Soviet%20Republics/Russian%20Soviet%20Federative%20Socialist%20Republic.png"><img
+                      src="media/small/Soviet%20Republics/Russian%20Soviet%20Federative%20Socialist%20Republic.png"
                       width="600"
-                      height="300"alt="Russian Socialist Federative Soviet Republic.png"/>
+                      height="300"alt="Russian Soviet Federative Socialist Republic.png"/>
               </a>
           
           </div>      
